[project]
name = "yarn-reporter"
version = "0.1.0"
description = "SDD yarn-reporter project"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"